--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
   </head>
   <body>
     <h1>Monstr Inc.</h1>
-    <div id='create-monster'></div>
-    <div id='monster-container'></div>
+    <div id='create-monster'>
+      <!-- add in the form to create a new monster -->
+      <form id="monster-form">
+        <input id="name" placeholder="name...">
+        <input id="age" placeholder="age...">
+        <input id="description" placeholder="description...">
+        <button>Create Monster</button>
+      </form>
+    </div>
     <button id="back"><=</button>
     <button id="forward">=></button>
-    <!-- <script src='index.js'></script> -->
-    <script src='demo.js'></script>
+    <div id='monster-container'></div>
+    <script src='index.js'></script>
+    <!-- <script src='demo.js'></script> -->
+
+
+    </div>
   </body>
 </html>
