--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
 
 
     </div>
+    <!-- Insert Button to load next 50 monsters -->
+    <button id="load-next-50" type="button">Load the next 50 Monstaz</button>
   </body>
 </html>
