--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
   <body>
     <h1>Monstr Inc.</h1>
     <div id='create-monster'></div>
+    <form class="monster-form-name" action="index.html" method="post">
+      <label for="name">Name:</label>
+      <input type="text" name="name" value="">
+      <label for="age">Age:</label>
+      <input type="text" name="age" value="">
+      <label for="description">Description:</label>
+      <input type="text" name="description" value="">
+      <input type="submit" name="submit" value="Submit">
+    </form>
     <div id='monster-container'></div>
     <button id="back"><=</button>
     <button id="forward">=></button>
-    <!-- <script src='index.js'></script> -->
-    <script src='demo.js'></script>
+    <script src='index.js'></script>
+    <!-- <script src='demo.js'></script> -->
   </body>
 </html>
