--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
   </head>
   <body>
     <h1>Monstr Inc.</h1>
-    <div id='create-monster'></div>
+
+    <div id='create-monster'>
+      <form>
+        Name: <input type="text" name="name" id='name-input'>
+        Age: <input type="text" name="age" id='age-input'>
+        Bio: <input type="text" name="bio" id='bio-input'>
+        <button type="submit">Create a Monsta!</button>
+      </form>
+    </div>
+
     <div id='monster-container'></div>
-    <button id="back"><=</button>
-    <button id="forward">=></button>
-    <!-- <script src='index.js'></script> -->
-    <script src='demo.js'></script>
+
+    <button id="back"><= Previous Fiddy Monsterz</button>
+    <button id="forward">Next Fiddy Monsterz =></button>
+    <script src='index.js'></script>
+    <!-- <script src='demo.js'></script> -->
   </body>
 </html>
