added create monster form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Monstr</title>
-    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
     <h1>Monstr Inc.</h1>
@@ -14,12 +14,15 @@
         <label for="age-input">Age:</label>
         <input type="text" name="age" id="age-input" /> <br />
         <label for="description-input">Description:</label>
-        <input type="text" name="description" id="description-input" />
+        <input type="text" name="description" id="description-input" /><br />
+        <button type="submit">Create Monster!</button>
       </form>
     </div>
+
     <div id="monster-container"></div>
-    <button id="back"><=</button> <button id="forward">=></button>
-    <script src="index.js"></script>
-    <!-- <script src='demo.js'></script> -->
+    <h2>MONSTERS</h2>
+    <button id="back">◀️</button> 🔴 <button id="forward">▶️</button>
+    <script src="src/index.js"></script>
+    <!-- <script src="src/demo.js"></script> -->
   </body>
 </html>
