--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
   </head>
   <body>
     <h1>Monstr Inc.</h1>
-    <div id='create-monster'></div>
+    <div id='create-monster'>
+      <form>
+        Name: <input type="text" id="new-name" name="name">
+        Age: <input type="text" id="new-age" name="age">
+        Description: <input type="text" id="new-description" name="description">
+        <input type="submit" value="Create Monster">
+      </form>
+    </div>
     <div id='monster-container'></div>
     <button id="back"><=</button>
     <button id="forward">=></button>
-    <!-- <script src='index.js'></script> -->
-    <script src='demo.js'></script>
+    <script src='index.js'></script>
+    <!-- <script src='demo.js'></script> -->
   </body>
 </html>
