--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
     </div>
 
     <div id='edit-monster'>
-
+      <form id="edit-monster-form">
+        <label for="name">Name: </label>
+        <input id="edit-monster-name" type="text" name="name" value=""></input>
+        <label for="description">Bio: </label>
+        <input id="edit-monster-description" type="text" name="name" value=""></input>
+        <label for="age">Age: </label>
+        <input id="edit-monster-age" type="text" name="name" value=""></input>
+        <input type="submit" name="" value="Edit Monster">
+      </form>
     </div>
     <div id='monster-container'></div>
     <button id="back"><=</button>
