--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Monstr</title>
+    <style>
+     body {font-family:'Geneva'};
+    </style>
   </head>
   <body>
-    <h1>Monstr Inc.</h1>
+    <center><h1>Monstr Inc.</h1></center>
     <div id='create-monster'></div>
     <div id='monster-container'></div>
-    <button id="back"><=</button>
-    <button id="forward">=></button>
-    <!-- <script src='index.js'></script> -->
-    <script src='demo.js'></script>
+    <button id="back"><= GO BACKk</button>  ||  
+    <button id="forward">GO ONWARDs =></button>
+    <script src='index.js'></script>
+    <!-- <script src='demo.js'></script> -->
   </body>
 </html>
